Fix empty StudentCourse error by create new List. Fix create new Student error, change Student view to be suitable for new fix.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StudentManagement": "Server=HQD;Database=StudentManagement;Trusted_Connection=true;TrustServerCertificate=true"
+    "StudentManagement": "Server=DESKTOP-T54CG6G;Database=StudentManagement;Trusted_Connection=true;TrustServerCertificate=true"
   }
 }
